--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "노마드 코더 강좌 실습용",
   "main": "index.js",
   "dependencies": {
+    "tsc-watch": "^4.6.0",
     "typescript": "^4.5.4",
     "yarn": "^1.22.17"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "prestart": "npx tsc"
+    "start": "tsc-watch --onSuccess \" node dist/index.js\""
   },
   "repository": {
     "type": "git",
